# unittest-c-linker-substitution

./: .gitignore  CMakeLists.txt  README.md
src/: led.c  led.h  main.c
src/hal/my_hal/: gpio.c  gpio.h
src/hal/vendor_hal/: gpio.c  gpio.h
test/: CMakeLists.txt  led_test.cpp
test/test_doubles/zephyr/: types.h
test/test_doubles/zephyr/drivers/: gpio.h  gpio_mock.cpp  gpio_mock.hpp
